<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/pwResetScrollPaddingBottom">

            <EditText
                android:id="@+id/editPasswordResetEmail"
                android:layout_width="@dimen/pwResetInputWidth"
                android:layout_height="@dimen/pwResetInputHeight"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/pwResetSpace10dp"
                android:backgroundTint="@color/darkPurple1"
                android:cursorVisible="false"
                android:hint="@string/password_reset_email_hint" />

            <Button
                android:id="@+id/btnPasswordResetAuthCodeSend"
                android:layout_width="@dimen/pwResetButtonWidth"
                android:layout_height="@dimen/pwResetButtonHeight"
                android:layout_below="@id/editPasswordResetEmail"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/pwResetSpace10dp"
                android:background="@color/darkPurple1"
                android:text="@string/password_reset_auth_code_send"
                android:textColor="@color/white" />

        </RelativeLayout>

    <Button
        android:id="@+id/btnPasswordResetNext"
        android:layout_width="match_parent"
        android:layout_height="@dimen/pwResetButtonHeight"
        android:layout_alignParentBottom="true"
        android:background="@color/darkPurple1"
        android:text="@string/password_reset_next"
        android:textColor="@color/white"
        android:textSize="@dimen/pwResetNextText" />

</RelativeLayout>